--- a/Atividade02_Lista-Filmes/style.css
+++ b/Atividade02_Lista-Filmes/style.css
@@ -22,7 +22,8 @@ body {
 
 .container div {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
+    gap: 10px;
 }
 
 .container input {
@@ -34,7 +35,13 @@ body {
 .container button {
     padding: 8px;
     border-radius: 8px;
-    border: solid 1px black;
+    border: solid 2px black;
+    cursor: pointer;
+    font-weight: 600;
+}
+
+.container button:hover {
+    background-color: rgb(255, 185, 185);
 }
 
 #listaFilmes {
